crates/facet_generate/src/reflection/snapshots/facet_generate__reflection__opaque_proxy_combinations__rename_all_override_on_renamed_opaque_proxy_field.snap
---
source: crates/facet_generate/src/reflection/opaque_proxy_combinations.rs
expression: "reflect!(Holder, UserId).unwrap()"
---
? namespace: ROOT
  name: Holder
: STRUCT:
    - - ownerId:
          - TYPENAME:
              namespace: ROOT
              name: UserId
          - []
    - []
? namespace: ROOT
  name: UserId
: NEWTYPESTRUCT:
    - STR
    - - "Domain ID with `Facet`. Wire anchor for typegen."
