crates/facet_generate/src/reflection/snapshots/facet_generate__reflection__opaque_proxy_combinations__rename_all_with_opaque_proxy_field.snap
---
source: crates/facet_generate/src/reflection/opaque_proxy_combinations.rs
expression: "reflect!(WithRenameAll, UserId).unwrap()"
---
? namespace: ROOT
  name: UserId
: NEWTYPESTRUCT:
    - STR
    - - "Domain ID with `Facet`. Wire anchor for typegen."
? namespace: ROOT
  name: WithRenameAll
: STRUCT:
    - - ownerUserId:
          - TYPENAME:
              namespace: ROOT
              name: UserId
          - []
    - []
