crates/facet_generate/src/reflection/snapshots/facet_generate__reflection__opaque_proxy_combinations__rename_on_proxy_type_with_opaque_field.snap
---
source: crates/facet_generate/src/reflection/opaque_proxy_combinations.rs
expression: "reflect!(Holder, RenamedUserId).unwrap()"
---
? namespace: ROOT
  name: Holder
: STRUCT:
    - - user_id:
          - TYPENAME:
              namespace: ROOT
              name: WireUserId
          - []
    - []
? namespace: ROOT
  name: WireUserId
: NEWTYPESTRUCT:
    - STR
    - []
