crates/facet_generate/src/reflection/snapshots/facet_generate__reflection__opaque_proxy_combinations__skip_on_opaque_proxy_field.snap
---
source: crates/facet_generate/src/reflection/opaque_proxy_combinations.rs
expression: "reflect!(WithSkip, UserId).unwrap()"
---
? namespace: ROOT
  name: UserId
: NEWTYPESTRUCT:
    - STR
    - - "Domain ID with `Facet`. Wire anchor for typegen."
? namespace: ROOT
  name: WithSkip
: STRUCT:
    - - normal:
          - U32
          - []
    - []
